--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="logo"><a href="#">My Portfolio</a></div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="./about.html">About</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
