--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
     <section class="about-wrapper">
 
-        <div class="scroll-section fade-in">
+        <div class="scroll-section fade-in intro-block">
             <h1 class="headline">Meet me.</h1>
             <img src="about_pics/meg.jpg" alt="Et bilde av meg" class="profile-img">
         </div>
@@ -52,7 +52,7 @@
 
         <div class="scroll-section fade-in delay-2">
             <p class="textblock">
-                I work with HTML, CSS, JavaScript and React — and I bring ideas to life 
+                I work with HTML, CSS, JavaScript and React, and I bring ideas to life 
                 with tools like Photoshop, Illustrator and Premiere Pro.
             </p>
         </div>
